# backtest-dss

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  backtest.py  compare_strategies.py  compare_years.py  dongpa_engine.py  dongpa_optuna.py  main.py  pyproject.toml  ui_common.py
config/: order_book_settings.json  personal_settings.json  strategy.json
engines/: dongpa_engine.py  dongpa_optuna.py  order_book_engine.py
pages/: 1_backtest.py  2_orderBook.py  2_order_book.py  3_optuna.py
tests/: conftest.py  test_backtest.py  test_execution.py  test_indicators.py  test_metrics.py  test_mode.py  test_order_book_engine.py
ui/: common.py
