[project]
name = "dongpa-backtest"
version = "0.1.0"
description = "Streamlit-based backtesting application for Dongpa Method trading strategy"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "yfinance",
    "pandas",
    "numpy",
    "optuna",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.0.0",
]
